--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/server.ts",
-		"type": "module",
+  "type": "module",
   "scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon src/server.ts",
-		"build": "rm -rf build/ && tsc"
-	},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server.ts",
+    "build": "rm -rf build/ && tsc"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ahsanali17/Calendar"
@@ -18,25 +18,26 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-		"chalk": "^5.1.2",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"express-session": "^1.17.3",
-		"joi": "^17.6.4",
-		"connect-mongo": "^4.6.0",
-		"mongoose": "^6.7.0",
-		"passport": "^0.6.0",
-		"passport-google-oauth20": "^2.0.0"
+    "chalk": "^5.1.2",
+    "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "joi": "^17.6.4",
+    "mongoose": "^6.7.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
-		"@types/express": "^4.17.14",
-		"@types/express-session": "^1.17.5",
-		"@types/node": "^18.11.9",
-		"@types/passport": "^1.0.11",
-		"@types/passport-google-oauth20": "^2.0.11",
-		"ts-node": "^10.9.1",
-		"typescript": "^4.8.4"
+    "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
+    "@types/node": "^18.11.9",
+    "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
