--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@leecheuk/react-google-login": "^5.4.1",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.3.2",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
-    "react": "^18.2.0",
+    "gapi-script": "^1.2.0",
+    "react": "^18.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
